Added Working with real Data using EF Core Functionality

--- a/Net6Fundamentals/appsettings.json
+++ b/Net6Fundamentals/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ShopDbContextConnection": "Data Source=DESKTOP-9RGD08D;Initial Catalog=Shop;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
